--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -7,15 +7,15 @@
                 <label>Full Name*</label>
                 <input type="text" placeholder="Enter full name" formControlName="name"  />
                 <div *ngIf="formData.controls['name'].invalid && formData.controls['name'].touched">
-                    <p *ngIf="formData.controls['name'].hasError('required')">Name is required.</p>
+                    <p class="msg" *ngIf="formData.controls['name'].hasError('required')">Name is required.</p>
                 </div>
             </div>
             <div class="input-box" align="left">
                 <label>Email Address*</label>
                 <input type="text" placeholder="Enter email address" formControlName="email"  />
                 <div *ngIf="formData.controls['email'].invalid && formData.controls['email'].touched">
-                    <p *ngIf="formData.controls['email'].hasError('required')">Email is required.</p>
-                    <p *ngIf="formData.controls['email'].hasError('email')">Invalid email format.</p>
+                    <p class="msg" *ngIf="formData.controls['email'].hasError('required')">Email is required.</p>
+                    <p class="msg" *ngIf="formData.controls['email'].hasError('email')">Invalid email format.</p>
                 </div>
             </div>
             <div class="gender-box" align="left">
@@ -30,7 +30,7 @@
                         <label for="female">Female</label>
                         </div>
                         <div *ngIf="formData.controls['gender'].invalid && formData.controls['gender'].touched">
-                            <p *ngIf="formData.controls['gender'].hasError('required')">Gender is required.</p>
+                            <p *ngIf="formData.controls['gender'].hasError('required')" class="msg">Gender is required.</p>
                         </div>
                     </div>
             </div>
@@ -43,8 +43,8 @@
                 </label>
                 </span>
             </div>
-
-            <input type="submit" value="Submit" class=" submit-btn btn btn-block">
+            <button type="submit" [disabled]="formData.invalid" value="Submit" class=" submit-btn btn btn-block">Submit</button>
+            <!-- <input type="submit"  value="Submit" class=" submit-btn btn btn-block"> -->
         </form>
         <!-- shows two-way-binding i.e. input and output -->
         <!-- {{gender}} -->
